fix(chats): fix height messages-container and add scrollbar, fix position for header and footer,

--- a/src/app/pages/chats-page/chats-messages/chats-message-input/chats-message-input.component.scss
+++ b/src/app/pages/chats-page/chats-messages/chats-message-input/chats-message-input.component.scss
@@ -5,6 +5,7 @@
   padding: 16px  20px;
   border: 1px solid var(--grey-color);
   align-items: center;
+  height: 100%;
 }
 
 .btn-send-message {
