--- a/src/app/pages/chats-page/chats-messages/chats-messages-message/chats-messages-message.component.scss
+++ b/src/app/pages/chats-page/chats-messages/chats-messages-message/chats-messages-message.component.scss
@@ -3,6 +3,7 @@
   background-color: var(--message-color);
   padding: 16px;
   width: max-content;
+  max-height: fit-content;
   max-width: 400px;
   border-radius: 2px;
   // mask: linear-gradient(#000 0 0), linear-gradient(-228deg, #000 47%, rgba(0, 0, 0, 0) 0) border-box 100% 108% / 21% 205% no-repeat;
